--- a/_msvcStuff/BattleCityEos.vcxproj
+++ b/_msvcStuff/BattleCityEos.vcxproj
@@ -62,13 +62,15 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\_msvcStuff;..\src;C:\Prj\_L\SDL\SDL2\include;C:\Prj\_L\SDL\SDL2\include\SDL2;C:\Prj\_L\SDL\SDL2_mixer\include;C:\Prj\_L\SDL\SDL2_ttf\include;C:\Prj\_L\SDL\SDL2_image\include;</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\_msvcStuff;..\src;C:\Prj\_L\SDL\SDL2\include;C:\Prj\_L\SDL\SDL2\include\SDL2;C:\Prj\_L\SDL\SDL2_mixer\include;C:\Prj\_L\SDL\SDL2_ttf\include;C:\Prj\_L\SDL\SDL2_image\include;C:\Prj\_L\net\gRpcDebugFull_x86\include;</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
       <Optimization>Disabled</Optimization>
       <ForcedIncludeFiles>stdafx.h</ForcedIncludeFiles>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <DisableSpecificWarnings>4244;4996;</DisableSpecificWarnings>
+      <MultiProcessorCompilation>true</MultiProcessorCompilation>
+      <AdditionalOptions>/Zc:sizedDealloc- %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -80,8 +82,96 @@ SDL2_ttf.lib
 SDL2_image.lib
 SDL2main.lib
 opengl32.lib
+absl_bad_any_cast_impl.lib
+absl_bad_optional_access.lib
+absl_bad_variant_access.lib
+absl_base.lib
+absl_city.lib
+absl_civil_time.lib
+absl_cord.lib
+absl_cordz_functions.lib
+absl_cordz_handle.lib
+absl_cordz_info.lib
+absl_cordz_sample_token.lib
+absl_cord_internal.lib
+absl_crc32c.lib
+absl_crc_cord_state.lib
+absl_crc_cpu_detect.lib
+absl_crc_internal.lib
+absl_debugging_internal.lib
+absl_demangle_internal.lib
+absl_die_if_null.lib
+absl_examine_stack.lib
+absl_exponential_biased.lib
+absl_failure_signal_handler.lib
+absl_flags.lib
+absl_flags_commandlineflag.lib
+absl_flags_commandlineflag_internal.lib
+absl_flags_config.lib
+absl_flags_internal.lib
+absl_flags_marshalling.lib
+absl_flags_parse.lib
+absl_flags_private_handle_accessor.lib
+absl_flags_program_name.lib
+absl_flags_reflection.lib
+absl_flags_usage.lib
+absl_flags_usage_internal.lib
+absl_graphcycles_internal.lib
+absl_hash.lib
+absl_hashtablez_sampler.lib
+absl_int128.lib
+absl_kernel_timeout_internal.lib
+absl_leak_check.lib
+absl_log_entry.lib
+absl_log_flags.lib
+absl_log_globals.lib
+absl_log_initialize.lib
+absl_log_internal_check_op.lib
+absl_log_internal_conditions.lib
+absl_log_internal_format.lib
+absl_log_internal_globals.lib
+absl_log_internal_log_sink_set.lib
+absl_log_internal_message.lib
+absl_log_internal_nullguard.lib
+absl_log_internal_proto.lib
+absl_log_severity.lib
+absl_log_sink.lib
+absl_low_level_hash.lib
+absl_malloc_internal.lib
+absl_periodic_sampler.lib
+absl_random_distributions.lib
+absl_random_internal_distribution_test_util.lib
+absl_random_internal_platform.lib
+absl_random_internal_pool_urbg.lib
+absl_random_internal_randen.lib
+absl_random_internal_randen_hwaes.lib
+absl_random_internal_randen_hwaes_impl.lib
+absl_random_internal_randen_slow.lib
+absl_random_internal_seed_material.lib
+absl_random_seed_gen_exception.lib
+absl_random_seed_sequences.lib
+absl_raw_hash_set.lib
+absl_raw_logging_internal.lib
+absl_scoped_set_env.lib
+absl_spinlock_wait.lib
+absl_stacktrace.lib
+absl_status.lib
+absl_statusor.lib
+absl_strerror.lib
+absl_strings.lib
+absl_strings_internal.lib
+absl_string_view.lib
+absl_str_format_internal.lib
+absl_symbolize.lib
+absl_synchronization.lib
+absl_throw_delegate.lib
+absl_time.lib
+absl_time_zone.lib
+utf8_range.lib
+utf8_validity.lib
+libprotobufd.lib
  %(AdditionalOptions)</AdditionalOptions>
-      <AdditionalLibraryDirectories>C:\Prj\_L\SDL\SDL2\lib\x86;C:\Prj\_L\SDL\SDL2_mixer\lib\x86;C:\Prj\_L\SDL\SDL2_ttf\lib\x86;C:\Prj\_L\SDL\SDL2_image\lib\x86;</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\Prj\_L\SDL\SDL2\lib\x86;C:\Prj\_L\SDL\SDL2_mixer\lib\x86;C:\Prj\_L\SDL\SDL2_ttf\lib\x86;C:\Prj\_L\SDL\SDL2_image\lib\x86;C:/Prj/_L/net/gRpcDebugFull_x86/lib</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -154,6 +244,7 @@ C:\Prj\_L\Qt\lib\Qt5QuickWidgets.lib %(AdditionalOptions)
     <ClCompile Include="..\src\objects\object.cpp" />
     <ClCompile Include="..\src\objects\player.cpp" />
     <ClCompile Include="..\src\objects\tank.cpp" />
+    <ClCompile Include="..\src\proto\AllInOne.pb.cc" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
@@ -180,6 +271,7 @@ C:\Prj\_L\Qt\lib\Qt5QuickWidgets.lib %(AdditionalOptions)
     <ClInclude Include="..\src\objects\object.h" />
     <ClInclude Include="..\src\objects\player.h" />
     <ClInclude Include="..\src\objects\tank.h" />
+    <ClInclude Include="..\src\proto\AllInOne.pb.h" />
     <ClInclude Include="..\src\type.h" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
@@ -196,6 +288,11 @@ C:\Prj\_L\Qt\lib\Qt5QuickWidgets.lib %(AdditionalOptions)
     <CopyFileToFolders Include="..\..\..\_L\SDL\SDL2_ttf\lib\x86\SDL2_ttf.dll">
       <FileType>Document</FileType>
     </CopyFileToFolders>
+    <CustomBuild Include="..\resources\proto\AllInOne.proto">
+      <FileType>Document</FileType>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">C:\Prj\syscross\BattleCityEos\src\proto\AllInOne.pb.h;C:\Prj\syscross\BattleCityEos\src\proto\AllInOne.pb.cc;</Outputs>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">C:\Prj\_L\net\gRpcDebug_x86\bin\protoc %(FullPath) -I $(SolutionDir)resources\proto --cpp_out=$(SolutionDir)src\proto</Command>
+    </CustomBuild>
     <None Include="cpp.hint" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
