--- a/_msvcStuff/BattleCityEos.vcxproj
+++ b/_msvcStuff/BattleCityEos.vcxproj
@@ -34,6 +34,9 @@
   <PropertyGroup Label="Configuration" Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <WholeProgramOptimization>true</WholeProgramOptimization>
   </PropertyGroup>
+  <PropertyGroup Label="Configuration" Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
+    <UseDebugLibraries>true</UseDebugLibraries>
+  </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings" />
   <ImportGroup Label="Shared" />
@@ -71,6 +74,7 @@
       <DisableSpecificWarnings>4244;4996;</DisableSpecificWarnings>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <AdditionalOptions>/Zc:sizedDealloc- %(AdditionalOptions)</AdditionalOptions>
+      <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -244,7 +248,7 @@ C:\Prj\_L\Qt\lib\Qt5QuickWidgets.lib %(AdditionalOptions)
     <ClCompile Include="..\src\objects\object.cpp" />
     <ClCompile Include="..\src\objects\player.cpp" />
     <ClCompile Include="..\src\objects\tank.cpp" />
-    <ClCompile Include="..\src\proto\AllInOne.pb.cc" />
+    <ClCompile Include="..\src\proto\acme.pb.cc" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
@@ -271,7 +275,8 @@ C:\Prj\_L\Qt\lib\Qt5QuickWidgets.lib %(AdditionalOptions)
     <ClInclude Include="..\src\objects\object.h" />
     <ClInclude Include="..\src\objects\player.h" />
     <ClInclude Include="..\src\objects\tank.h" />
-    <ClInclude Include="..\src\proto\AllInOne.pb.h" />
+    <ClInclude Include="..\src\protobufProxy.h" />
+    <ClInclude Include="..\src\proto\acme.pb.h" />
     <ClInclude Include="..\src\type.h" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
@@ -288,9 +293,9 @@ C:\Prj\_L\Qt\lib\Qt5QuickWidgets.lib %(AdditionalOptions)
     <CopyFileToFolders Include="..\..\..\_L\SDL\SDL2_ttf\lib\x86\SDL2_ttf.dll">
       <FileType>Document</FileType>
     </CopyFileToFolders>
-    <CustomBuild Include="..\resources\proto\AllInOne.proto">
+    <CustomBuild Include="..\resources\proto\acme.proto">
       <FileType>Document</FileType>
-      <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">C:\Prj\syscross\BattleCityEos\src\proto\AllInOne.pb.h;C:\Prj\syscross\BattleCityEos\src\proto\AllInOne.pb.cc;</Outputs>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">C:\Prj\syscross\BattleCityEos\src\proto\acme.pb.h;C:\Prj\syscross\BattleCityEos\src\proto\acme.pb.cc;</Outputs>
       <Command Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">C:\Prj\_L\net\gRpcDebug_x86\bin\protoc %(FullPath) -I $(SolutionDir)resources\proto --cpp_out=$(SolutionDir)src\proto</Command>
     </CustomBuild>
     <None Include="cpp.hint" />
